Теперь описание четырёх блоков слева (City, Appartament Area, Repair time, Repair Cost) меняются динамически, в зависимости от слайдера справа. Также исправлен баг, при котором вёрстка ломалась.

--- a/index.html
+++ b/index.html
@@ -22,20 +22,19 @@
 			<div class="main__text-block">
 				<div class="main__text-block-1">
 					<h2 class="main__h2 main__h2_margin-bot">City:</h2>
-					<p class="main__text">Rostov-on-Don <br>
-						LCD admiral</p>
+					<p class="main__text main__text_width-95"></p>
 				</div>
 				<div class="main__text-block-2">
 					<h2 class="main__h2 main__h2_margin-bot">apartment area:</h2>
-					<p class="main__text">81 m2</p>
+					<p class="main__text main__text_width-95"></p>
 				</div>
 				<div class="main__text-block-3">
 					<h2 class="main__h2 main__h2_margin-bot">Repair time:</h2>
-					<p class="main__text">3.5 months</p>
+					<p class="main__text main__text_width-95"></p>
 				</div>
 				<div class="main__text-block-4">
 					<h2 class="main__h2 main__h2_margin-bot">Repair Cost:</h2>
-					<p class="main__text">Upon request</p>
+					<p class="main__text main__text_width-95"></p>
 				</div>
 			</div>
 			<div class="main__nav-slider">
